--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -1,16 +1,28 @@
 button {
     font-size: var(--font-size);
+    font-family: 'Nunito', sans-serif; /*??*/
+    color: var(--text-color);
     height: var(--height);
     width: var(--width);
     background-color: var(--primary-color);
     border-width: 0 px;
     border-color: rgba(245, 245, 245, 0.7);
     margin: 10px;
-    border-radius: 40px;
+    border-radius: var(--border-radius);
     box-shadow: -12px -12px 20px rgba(255, 255, 255, 0.8), 10px 10px 20px rgba(166, 180, 200, 0.7);
 }
 
 .inverted {
-    background-color: var(--primary-color);
-    color: white;
+    background-color: var(--text-color);
+    color: var(--primary-color);
 }
+
+/*
+.col
+{
+  position: relative;
+  width: 100%;
+  padding-right: 1.5rem;
+  padding-left: 1.5rem;
+}
+*/
