--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -1,6 +1,7 @@
 button {
     font-size: var(--font-size);
-    font-family: 'Nunito', sans-serif; /*??*/
+    font-family: 'Nunito', sans-serif;
+    font-weight: 800;
     color: var(--text-color);
     height: var(--height);
     width: var(--width);
@@ -10,11 +11,18 @@ button {
     margin: 10px;
     border-radius: var(--border-radius);
     box-shadow: -12px -12px 20px rgba(255, 255, 255, 0.8), 10px 10px 20px rgba(166, 180, 200, 0.7);
+   
 }
 
 .inverted {
     background-color: var(--text-color);
     color: var(--primary-color);
+}
+
+.pressed {
+    box-shadow: none;
+    position: relative;
+    top: 3px; left: 3px;
 }
 
 /*
