--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,6 +1,12 @@
 .navbar {
-    height: 4rem;
-    width: 100%;
+    height: 2rem;
+    width: 50%;
+    background-color: #EEF0F5;
+    border-width: 0 px;
+    border-color: rgba(245, 245, 245, 0.7);
+    border-radius: 40px;
+    box-shadow: -12px -12px 20px rgba(255, 255, 255, 0.8), 10px 10px 20px rgba(166, 180, 200, 0.7);
+    text-align: center;
 }
 
 .search-container {
@@ -10,7 +16,8 @@
     right: 25%;
     top: 3%;
     height: 1.5rem;
-
+    text-align: center;
+    align-items: center;
     
     background-color: linear-gradient(134.17deg, #EEF0F5 4.98%, #E6E9EF 94.88%);
     box-shadow: var(--box-shadow);
