--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,36 +1,30 @@
 .navbar {
-    height: 2rem;
-    width: 50%;
-    background-color: #EEF0F5;
-    border-width: 0 px;
-    border-color: rgba(245, 245, 245, 0.7);
-    border-radius: 40px;
-    box-shadow: -12px -12px 20px rgba(255, 255, 255, 0.8), 10px 10px 20px rgba(166, 180, 200, 0.7);
+    height: 2.7rem;
+    width: 100%;
     text-align: center;
+    align-items: center;
 }
 
 .search-container {
     /* contendor del buscador*/
-    position: absolute;
-    left: 25%;
-    right: 25%;
-    top: 3%;
-    height: 1.5rem;
+    margin-left: 25%;
+    position: relative;
+    width: 50%;
+    height: 100%;
+    background-color: #EEF0F5;
+    border-width: 0 px;
+    border-color: rgba(245, 245, 245, 0.7);
+    border-radius: 20px;
+    box-shadow: -12px -12px 20px rgba(255, 255, 255, 0.8), 10px 10px 20px rgba(166, 180, 200, 0.7);
     text-align: center;
     align-items: center;
-    
-    background-color: linear-gradient(134.17deg, #EEF0F5 4.98%, #E6E9EF 94.88%);
-    box-shadow: var(--box-shadow);
-    border-radius: 40px;
 }
 
 .icon {
     /* */
-    position: absolute;
+    margin-left: 3%;
+    position: relative;
     float: left;
-    top: 45%;
-    left: 1.5rem;
-    transform: translate(-50%,-50%);
     color: var(--dark-color);
 }
 
@@ -41,9 +35,7 @@
     box-shadow: none;
     float: right;
     
-    width: 80%;
-    padding-left: 15px;
-    padding-right: 15px;
+    width: 100%;
 
     /* tipografia */
     font-style: normal;
