--- a/src/components/NavBar/Navbar.css
+++ b/src/components/NavBar/Navbar.css
@@ -7,7 +7,7 @@
 
 .search-container {
     /* contendor del buscador*/
-    margin-left: 25%;
+    margin-left: 10px;
     position: relative;
     width: 50%;
     height: 100%;
@@ -52,4 +52,15 @@
     border: 0;
 
     color:var(--dark-color);
+}
+
+.searchLogo{
+    width: 20px;
+    height: auto;
+    margin: 2.5px;
+    margin-left:-30px;
+}
+
+.userLogo, .menuLogo{
+    margin-top: 10px;
 }
